# AR-CityModels

./: CMakeLists.txt  README.md  aruco_creator.hpp  augmented_mockup.hpp  charuco.hpp  charuco_calibration.hpp  interactor.hpp  main.cpp  mesh.hpp  model.hpp  obj.hpp  plane.hpp  plane_texture.hpp  shader.hpp
cmake_modules/: FindASSIMP.cmake
resources/camera_parameters/: camera_parameters.yml  villanueva_parametros.yml
resources/objects/boat/: Boat.mtl
resources/objects/house/: house.mtl
resources/objects/minitower/: tower.mtl
resources/objects/temple/: temple.mtl
resources/objects/temple/textures/: terratcolor.tx
resources/objects/tower/: tower.mtl
resources/shader/: vertex_shader_no_texture.vs
